# shadow-fraction

./: CMakeLists.txt  README.md  config.json  release-install.sh
include/: SC_SurfaceCalc.hpp
lib/: SfcCalc.lib  SfcCalcd.lib
src/: CMakeLists.txt  compression.h  date.cc  date.h  fileio.cc  fileio.h  fraction.cpp  fractioncalculator.cc  fractioncalculator.h  jsonreader.cc  jsonreader.h  jsonstruct.cc  jsonstruct.h  mrtcalculator.cc  mrtcalculator.h  petcalculator.cc  petcalculator.h  struct.h  vfcalculator.cc  vfcalculator.h
src/fisheye/: Texture.h  fisheye.h
